# Scylla

./: .gitmodules  CMakeLists.txt  COMPILING.md  README.md  appveyor.yml
Scylla/: AboutGui.cpp  AboutGui.h  ApiReader.cpp  Architecture.h  DisassemblerGui.cpp  DisassemblerGui.h  DllInjection.cpp  DonateGui.cpp  DonateGui.h  DumpMemoryGui.cpp  DumpMemoryGui.h  DumpSectionGui.cpp  DumpSectionGui.h  FunctionExport.cpp  FunctionExport.h  IATSearch.cpp  ImportRebuilder.cpp  ImportsHandling.cpp  ImportsHandling.h  ListboxLog.cpp  ListboxLog.h  Logger.cpp  Logger.h  MainGui.cpp  MainGui.h  OptionsGui.cpp  OptionsGui.h  PeParser.cpp  PickApiGui.cpp  PickApiGui.h  PickDllGui.cpp  PickDllGui.h  PluginLoader.cpp  ProcessAccessHelp.cpp  ProcessLister.cpp  Scylla.cpp  Scylla.h  Scylla.vcxproj  TreeImportExport.cpp  hexedit.h  (+2 more)
ScyllaDllTest/ScyllaDllTest/: DebugProcess.cpp  DebugProcess.h  ScyllaLoad.cpp  ScyllaLoad.h  Source.cpp
libScylla/: FunctionExport.cpp  FunctionExport.h  MainDll.cpp  ScyllaDLL.cpp  ScyllaDLL.h
libScylla_static/: ApiReader.cpp  ApiReader.h  Architecture.h  Configuration.cpp  Configuration.h  ConfigurationHolder.cpp  ConfigurationHolder.h  DeviceNameResolver.cpp  DeviceNameResolver.h  DllInjection.cpp  DllInjection.h  DllInjectionPlugin.cpp  DllInjectionPlugin.h  ExceptionHandler.cpp  ExceptionHandler.h  IATReferenceScan.cpp  IATReferenceScan.h  IATSearch.cpp  IATSearch.h  ImportRebuilder.cpp  ImportRebuilder.h  ImportsHandling.cpp  ImportsHandling.h  Logger.cpp  Logger.h  NativeWinApi.cpp  NativeWinApi.h  PeParser.cpp  PeParser.h  PeRebuild.cpp  PeRebuild.h  PluginLoader.cpp  PluginLoader.h  ProcessAccessHelp.cpp  ProcessAccessHelp.h  ProcessLister.cpp  ProcessLister.h  Scylla.cpp  Scylla.h  Scylla.h.in  (+28 more)
tests/: DumpbinIatDirectoryEntry.ps1
